# OptixRCS

./: .gitignore  CMakeLists.txt  README.md  diagram.ipynb  runner.py  sampleConfig.h.in  visualizer.ipynb
CMake/: FindOptiX.cmake
CudaTest/: CMakeLists.txt  main.cpp  reduceKernels.cu  reduceKernels.h
ExtremeSpeedBranch/: CMakeLists.txt  main.cpp  rcs_params.h  rcs_predicitor.h  reduceKernels.cu  reduceKernels.h  triangles_rcs.cu
RcsSpeedBranch/: CMakeLists.txt  main.cpp  rcs_params.h  rcs_predicitor.h  reduce.cu  reduceKernels.cu  reduceKernels.h  triangles_rcs.cu
TrianglesRCS/: CMakeLists.txt  complex_vector.cu  rcs_params.h  reduce.cu  tiny_obj_loader.h  triangles_rcs.cpp  triangles_rcs.cu  triangles_rcs.h
cuda/: BufferView.h  GeometryData.h  MaterialData.h  camera.cu  curve.h  geometry.cu  helpers.h  shading.cu  sphere.cu  sphere.h  whitted.cu  whitted.h  whitted_cuda.h
deep learn/: train.ipynb
depth_rcs_test/: depth_polt.ipynb  depth_test.ipynb  runner.py
depth_test/: time_polt.ipynb  timing.ipynb
memory_test/: memory_polt.ipynb  memory_test.ipynb  runner.py
output/: a380_rcs.csv  a380_v1_rcs.csv  corner_reflector_rcs.csv  d_reflector_rcs.csv  hawker_800_rcs.csv  hawker_900_rcs.csv  large_trihedral_reflector_2_rcs.csv  x35_2_rcs.csv  x35_all_angle  x35_rcs.csv
reflect_test/: reflect_polt.ipynb  reflect_test.ipynb
resources/: b1b.mtl
sutil/: CMakeLists.txt  CuBuffer.h  Scene.cpp  Scene.h  sutil.cpp  sutil.h
test/: corner_reflector_test.ipynb  d_reflector_test.ipynb  trihedral_reflector.ipynb  x35_test.ipynb
time_test/: time_polt.ipynb  time_test.ipynb
